--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.jpg" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Notion React Starter</title>
+    <title>BDR_App</title>
   </head>
   <body>
     <div id="root"></div>
